--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                 <nav class="navbar navbar-expand-lg navbar-light fixed-left">
                     <div class="container">
                         <a class="navbar-brand" href="index.html">
-                            <img src="images/logo.svg" alt="Logo">
+                            <svg width="788" height="750" viewBox="0 0 788 750" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M748.7 478.3L522.9 378.5L419.5 134.6L83.5 0L267.4 439.6L263.5 448.9H263.6L204 594.7L0 683.5L168.1 749.9L577.1 576.1L599 566.8L635 551.5L787.9 623.7L748.7 478.3ZM691.5 490.3L585.9 535.2L539.5 423.1L691.5 490.3ZM406.8 191.8L412.7 205.7L545.5 526.5L308.2 430.3L406.8 191.8ZM146.3 61.8L384.3 157.1L285.8 395.2L146.3 61.8ZM186 639.7L158.3 709.4L88.9 682L186 639.7ZM198.8 699.8L232.9 614L295.2 461.7L532.4 558L461.3 588.3L198.8 699.8ZM676.9 533.6L723 514L735.8 561.5L676.9 533.6Z" fill="#00A19A"/>
+                            </svg>
                             Metabird
                         </a>
                         <button class="navbar-toggler open">
