Updated animate.css to latest version

--- a/index_2.html
+++ b/index_2.html
@@ -64,7 +64,9 @@
                 <nav class="navbar navbar-expand-lg navbar-light fixed-left">
                     <div class="container">
                         <a class="navbar-brand" href="index.html">
-                            <img src="images/logo.svg" alt="Logo">
+                            <svg width="788" height="750" viewBox="0 0 788 750" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M748.7 478.3L522.9 378.5L419.5 134.6L83.5 0L267.4 439.6L263.5 448.9H263.6L204 594.7L0 683.5L168.1 749.9L577.1 576.1L599 566.8L635 551.5L787.9 623.7L748.7 478.3ZM691.5 490.3L585.9 535.2L539.5 423.1L691.5 490.3ZM406.8 191.8L412.7 205.7L545.5 526.5L308.2 430.3L406.8 191.8ZM146.3 61.8L384.3 157.1L285.8 395.2L146.3 61.8ZM186 639.7L158.3 709.4L88.9 682L186 639.7ZM198.8 699.8L232.9 614L295.2 461.7L532.4 558L461.3 588.3L198.8 699.8ZM676.9 533.6L723 514L735.8 561.5L676.9 533.6Z" fill="#00A19A"/>
+                            </svg>
                             Metabird
                         </a>
                         <button class="navbar-toggler open">
@@ -131,9 +133,9 @@
                             <div class="row min-vh-100">
                                 <div class="col-md-12 text-center my-auto">
                                     <div class="intro">
-                                        <div class="portrait-small animated fadeInDown"></div>
-                                        <h1 class="animated fadeInDown">Eric Bradley</h1>
-                                        <div class="typewriter mb-5 animated fadeInUp ">
+                                        <div class="portrait-small animate__animated animate__fadeInDown"></div>
+                                        <h1 class="animate__animated animate__fadeInDown">Eric Bradley</h1>
+                                        <div class="typewriter mb-5 animate__animated animate__fadeInUp ">
                                             I'm a
                                             <div class="typed-strings">
                                                 <span>Webdesigner</span>
@@ -142,7 +144,7 @@
                                             </div>
                                             <span class="typed"></span>
                                         </div>
-                                        <a href="#about" class="btn btn-primary animated fadeInUp">
+                                        <a href="#about" class="btn btn-primary animate__animated animate__fadeInUp">
                                             Learn more
                                         </a>
                                     </div>
@@ -162,10 +164,10 @@
                                 <div class="col-md-12">
                                     <h1>About me</h1>
                                 </div>
-                                <div class="col-md-5 pr-md-5 mb-4 mb-md-0 portrait animated">
+                                <div class="col-md-5 pr-md-5 mb-4 mb-md-0 portrait animate__animated">
                                     <img src="images/portrait.jpg" alt="">
                                 </div>
-                                <div class="col-md-7 description animated">
+                                <div class="col-md-7 description animate__animated">
                                     <h2>Hello, I'm Eric</h2>
                                     <p>
                                         Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.
@@ -276,7 +278,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row animated">
+                            <div class="row animate__animated">
                                 <div class="col-md-4 service">
                                     <div class="card">
                                         <div class="card-header">
@@ -399,7 +401,7 @@
                             </div>
 
                             <!-- Projects -->
-                            <div id="project-grid" class="row shuffle animated">
+                            <div id="project-grid" class="row shuffle animate__animated">
                                 <div class="col-md-4 project-item" data-groups='["graphic"]'>
                                     <a href="images/portfolio/project_01.jpg" data-lightbox="portfolio">
                                         <img src="images/portfolio/project_01.jpg" alt="">
@@ -448,7 +450,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row animated">
+                            <div class="row animate__animated">
                                 <div class="col-md-12">
                                     <div class="owl-carousel owl-theme">
                                         <div class="item">
@@ -502,7 +504,7 @@
                                 </div>
                             </div>
 
-                            <div class="row animated">
+                            <div class="row animate__animated">
                                 <div class="col-md-4 blog mb-5 mb-md-0">
                                     <div class="card">
                                         <div class="card-header">
@@ -582,7 +584,7 @@
                                         Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. 
                                     </p>
                                 </div>
-                                <div class="col-md-12 animated mb-4">
+                                <div class="col-md-12 animate__animated mb-4">
                                     <div class="row">
                                         <div class="col-sm-4 text-center">
                                             <div class="icon">
@@ -613,7 +615,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-12 contact-form animated">
+                                <div class="col-md-12 contact-form animate__animated">
                                     <form id="contact-form" method="post" action="php/contact.php">
                                         <div class="row">
                                             <div class="col-md-6 form-group">
