--- a/index_5.html
+++ b/index_5.html
@@ -703,7 +703,7 @@
         </div>
         
         <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="vendor/jquery/jquery.min.js"><\/script>');</script>
 
         <!-- Bootstrap JS -->
