--- a/documentation/index.html
+++ b/documentation/index.html
@@ -6,9 +6,9 @@
         <title>Metabird – Responsive Bootstrap Personal Template Documentation</title>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&family=Ruda:wght@400;500;600;700;800;900&display=swap">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/prism.css">
-        <link rel="stylesheet" href="css/prism-treeview.css">
+        <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="vendor/prism/css/prism.css">
+        <link rel="stylesheet" href="vendor/prsim/css/prism-treeview.css">
         <link rel="stylesheet" href="css/master.css">
     </head>
     <body>
@@ -31,10 +31,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h5>Introduction</h5>
-                            <ul>
-                                <li><strong>Version:</strong> 1.0.0</li>
+                            <h5 class="mt-0">Introduction</h5>
+                            <ul class="mb-0">
+                                <li><strong>Version:</strong> 1.1.2</li>
                                 <li><strong>Created:</strong> 13 February 2020</li>
+                                <li><strong>Latest update:</strong> 25 September 2020</li>
                             </ul>
 
                             <h5>Folder structure</h5>
@@ -282,6 +283,13 @@
                             </ul>
 
                             <h5>Changelog</h5>
+                            <strong>Version 1.1.2</strong> – 25 September 2020
+                            <ul>
+                                <li>Updated Bootstrap to the latest version</li>
+                                <li>Updated jQuery to the latest version</li>
+                                <li>Updated animate.css to the latest version</li>
+                                <li>CSS update</li>
+                            </ul>
                             <strong>Version 1.0</strong> – 13 February 2020
                             <ul>
                                 <li>Initial release</li>
@@ -292,9 +300,9 @@
             </main>
         </div>
 
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/prism.js"></script>
-        <script src="js/prism-treeview.js"></script>
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+        <script src="vendor/prism/js/prism.js"></script>
+        <script src="vendor/prism/js/prism-treeview.js"></script>
     </body>
 </html>
